ui cleanup done, overflow issue fixed

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -67,7 +67,6 @@ body {
   text-decoration: none;
   font-size: medium;
   margin-right: 1%;
-  margin-left: 1%;
 }
 
 .item:hover {
@@ -122,8 +121,9 @@ footer {
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-  width: 70%;
-  min-width: 400px;
+  width: 100%;
+  min-width: 250px;
+  margin-top: 20px;
   background-color: rgb(245, 245, 245, 0.75);
   border-radius: 5px;
 }
